src/serve/tests/requests/select/obj/snapshots/basiliq__serve__tests__requests__select__obj__sparse__sparse_other_single.snap
---
source: basiliq/src/serve/tests/requests/select/obj/sparse.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f",
    "attributes": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "relationships": {
      "public__articles": {
        "data": [
          {
            "type": "public__articles",
            "id": "fdf715dd-8772-498c-8196-6f4ccb64edef"
          },
          {
            "type": "public__articles",
            "id": "2dbf5d1a-b029-4456-af6b-339c75b1089c"
          }
        ]
      }
    }
  },
  "included": [
    {
      "type": "public__articles",
      "id": "2dbf5d1a-b029-4456-af6b-339c75b1089c",
      "attributes": {
        "title": "Oh my g**"
      }
    },
    {
      "type": "public__articles",
      "id": "fdf715dd-8772-498c-8196-6f4ccb64edef",
      "attributes": {
        "title": "How to dead"
      }
    }
  ]
}
