src/serve/tests/requests/select/obj/snapshots/basiliq__serve__tests__requests__select__obj__sparse__sparse_self_single.snap
---
source: basiliq/src/serve/tests/requests/select/obj/sparse.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f",
    "attributes": {
      "first-name": "Francis"
    }
  }
}
